k8s/jenkins/jenkins.dm.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: jenkins
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: jenkins
    spec:
      serviceAccountName: jenkins
      imagePullSecrets:
      - name: harbor
      nodeSelector:
        jenkins: master
      containers:
      - name: jenkins
        image: 172.31.21.226/ideal/jenkins:lts
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
        - containerPort: 50000
          name: agent
          protocol: TCP
        volumeMounts:
        - name: jenkinshome
          mountPath: /var/jenkins_home
      volumes:
      - name: jenkinshome
        persistentVolumeClaim:
          claimName: jenkins-pvc
