k8s/jenkins/jenkins.svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-ui
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: web
  - port: 50000
    targetPort: 50000
    name: agent
  selector:
    name: jenkins
