k8s/jenkins/jenkins.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-web
spec:
  rules:
  - host: jenkins.isoftone.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
